# ai-summer-challenge

./: .dockerignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.md  run.ps1  technical-solution.md
backend/: Dockerfile
data/processs/: output.json
docs/: architecture.md
frontend/: Dockerfile  __init__.py  api_client.py  requirements.txt  review.py  streamlit_app.py
resources/: BAFU Extract.xlsx  EclasseswithOilGasRelevance.txt  extraction_system_prompt.txt  extraction_user_prompt.txt  prompt_mapping.txt
scripts/: extract_source_to_json.py
src/pcf_pdf_extractor/: __init__.py  __main__.py  cli.py  config.py
src/pcf_pdf_extractor/api/: __init__.py  app.py
src/pcf_pdf_extractor/application/: __init__.py  extract_pcf.py
src/pcf_pdf_extractor/domain/: __init__.py  minimum_requirements.py  pcf.py
src/pcf_pdf_extractor/enrichment/: __init__.py  factory.py  reference_data.py
src/pcf_pdf_extractor/extraction/: __init__.py  base.py  factory.py  heuristic_extractor.py  llm_pcf_extractor.py
src/pcf_pdf_extractor/infrastructure/: __init__.py
src/pcf_pdf_extractor/infrastructure/api/: __init__.py  company_client.py
src/pcf_pdf_extractor/infrastructure/llm/: __init__.py  chat_completions_client.py
src/pcf_pdf_extractor/infrastructure/pdf/: __init__.py  reader.py
src/pcf_pdf_extractor/infrastructure/source/: __init__.py  base.py  document.py  email_reader.py  excel_reader.py  pdf_reader.py  selector.py
tests/unit/: test_api_app.py  test_chat_completions_client.py  test_heuristic_extractor.py  test_llm_pcf_extractor.py  test_minimum_requirements.py  test_pcf_model.py  test_reference_data_enricher.py  test_runtime_status.py  test_source_readers.py  test_streamlit_review.py
