[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pcf-pdf-extractor"
version = "0.1.0"
description = "Extract Product Carbon Footprint data from supplier documents and prepare it for API submission."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "extract-msg>=0.49",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pypdf>=4.2",
    "typer>=0.12",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]
ui = [
    "streamlit>=1.36",
]
api = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
pcf-extract = "pcf_pdf_extractor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
